--- a/index2.html
+++ b/index2.html
@@ -8,7 +8,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>Freakaholics Anonymous</title>
         <link href='http://fonts.googleapis.com/css?family=Nova+Round' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" href="styles/screen.css">
+        <link rel="stylesheet" href="styles/screen2.css">
         <script src="scripts/lib/modernizr-2.6.2.min.js"></script>
     </head>
     <body>
@@ -18,53 +18,20 @@
 
 
  
+<section id="barbara">
+
+<img src="images/barbara.gif" alt="Smiley face">
+</section>
+<section id="miami">
+<div>
+</div>
+<div >
+</div>
+</section>
 <section>
-<body>
-<div id="navContainer">
-<ul>
-<li> <span class="music"><a class="logo_rollover7" height="52" width="72" href="#"> Music </a></span></li>
-<li> <span class="videos"><a class="logo_rollover7" height="52" width="72" href="#"> Videos </a></span></li>
-<li> <spanclass="about"><a class="logo_rollover1" height="52" width="72" href="#"> About </a></span>
-<ul>
-<li> <a href="#"> Our business</a></li>
-<li> <a href="#"> Our History </a></li>
-</ul>
-</li>
-
-</ul>
-</div>
-
-
-<div id="navContainer2">
-<ul>
-
-
-
-<li>
-<span class="performances"><a href="#"> Performances </a></span>
-<ul>
-<li> <a href="#"> Web Design</a></li>
-<li> <a href="#"> Web templates </a></li>
-<li> <a href="#"> Tutorials </a></li>
-</ul>
-</li>
-<li><span class="contact"><a href="#"> Contact</a></span></li>
-<li> <span class="blogs"><a href="#"> Blogs </a></span></li>
-</ul>
-</div>
-
+  
 </section>
 
-<section id=“top”>
-   <object>
-    <param name="autostart" value="true">
-    <!--<param name="src" value="eureka.wav">
-    <param name="autoplay" value="true">
-    <param name="controller" value="true">
-    <embed src="ThoroughLover3.mp3" controller="true" autoplay="true" autostart="True" type="audio/wav" />
-    </object>-->
-</section>
-	
 
 		<!-- End Site Content -->
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
